src/test/deca/context/valid/decl_class_include_main.deca
#include "decl_class_include.deca"
{
A a;
int x = a.x;
a.method(10);
}