src/test/deca/context/invalid/circular_include2.deca
#include "circular_include.deca"
class B {
int x;
}